--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,10 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+.vscode
+
+.DS_Store
+.idea
 
 # yarn v3
 .pnp.*
